force-app/main/default/objects/Insolvency_Account__c/fields/CTB_Status_Update_Code__c.field-meta.xml
<CustomField>
    <fullName>CTB_Status_Update_Code__c</fullName>
    <inlineHelpText>Field updated when Processing status changed to Discharged or Annulled or Refused or Withdrawn</inlineHelpText>
    <label>CTB Status Update Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PCOM</fullName>
            </value>
            <value>
                <fullName>RREV</fullName>
            </value>
            <value>
                <fullName>DDEC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>