force-app/main/default/objects/Insolvency_Account__c/fields/CTB_Update_File_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>CTB_Update_File_Timestamp__c</fullName>
    <description>This field is created as a part of CTB Automation and will be used to store date/time when CTB insolvency file was processed</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Field used to store date/time when CTB insolvency file was processed</inlineHelpText>
    <label>CTB Incoming File Timestamp</label>
    <type>DateTime</type>
</CustomField>