force-app/main/default/objects/Insolvency_Account__c/fields/CTB_Update_Filename__c.field-meta.xml
<CustomField>
    <fullName>CTB_Update_Filename__c</fullName>
    <description>This field is created a part of Automation Ticket and this field will store the file name of csv processed for insolvency accounts.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Field used to store the file name of csv processed for insolvency accounts</inlineHelpText>
    <label>Incoming Filename</label>
    <length>200</length>
    <type>Text</type>
</CustomField>