force-app/main/default/objects/Insolvency_Account__c/fields/Customer_CID__c.field-meta.xml
<CustomField>
    <fullName>Customer_CID__c</fullName>
    <description>Client unique customer identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Client unique customer identifier</inlineHelpText>
    <label>Customer CID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>