force-app/main/default/objects/Insolvency_Account__c/fields/Data_ID__c.field-meta.xml
<CustomField>
    <fullName>Data_ID__c</fullName>
    <description>Data ID</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Data ID</inlineHelpText>
    <label>Data ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>