force-app/main/default/objects/Insolvency_Account__c/fields/Data_Status__c.field-meta.xml
<CustomField>
    <fullName>Data_Status__c</fullName>
    <description>Data Status</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Data Status</inlineHelpText>
    <label>Data Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>