force-app/main/default/objects/Insolvency_Account__c/fields/Date_Claim_Withdrawal_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Claim_Withdrawal_Sent__c</fullName>
    <description>This field is used to store the date on which Withdrawal PoC request sent</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Claim Withdrawal Sent</label>
    <type>Date</type>
</CustomField>