force-app/main/default/objects/Insolvency_Account__c/fields/Date_Final_Demand_Issued_to_Trustee__c.field-meta.xml
<CustomField>
    <fullName>Date_Final_Demand_Issued_to_Trustee__c</fullName>
    <description>The date that the final demand notice was sent to the trustee for this account&apos;s security.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date that the final demand notice was sent to the trustee for this account&apos;s security.</inlineHelpText>
    <label>Dont Use</label>
    <type>Date</type>
</CustomField>