force-app/main/default/objects/Insolvency_Account__c/fields/Date_LOR_received_for_Secured__c.field-meta.xml
<CustomField>
    <fullName>Date_LOR_received_for_Secured__c</fullName>
    <description>The date that the Letter of Release was received for the account&apos;s security.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date that the Letter of Release was received for the account&apos;s security.</inlineHelpText>
    <label>Date LoR Received For Secured</label>
    <type>Date</type>
</CustomField>