force-app/main/default/objects/Insolvency_Account__c/fields/Date_NOD_received__c.field-meta.xml
<CustomField>
    <fullName>Date_NOD_received__c</fullName>
    <description>The date that the Notice of Demand was received for the account&apos;s security.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date that the Notice of Demand was received for the account&apos;s security.</inlineHelpText>
    <label>Date NOD Received</label>
    <type>Date</type>
</CustomField>