force-app/main/default/objects/Insolvency_Account__c/fields/Date_POC_filed_as_Secured__c.field-meta.xml
<CustomField>
    <fullName>Date_POC_filed_as_Secured__c</fullName>
    <description>The date on which this account was previously filed with the trustee as a Secured account, is applicable.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The date on which this account was previously filed with the trustee as a Secured account, is applicable.</inlineHelpText>
    <label>Date PoC Filed as a Secured Account</label>
    <type>Date</type>
</CustomField>