force-app/main/default/objects/Insolvency_Account__c/fields/De_securitized_Date__c.field-meta.xml
<CustomField>
    <fullName>De_securitized_Date__c</fullName>
    <description>De-securitized Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>De-securitized Date</inlineHelpText>
    <label>De-securitized Date</label>
    <type>Date</type>
</CustomField>