force-app/main/default/objects/Insolvency_Account__c/fields/Debt_Amount__c.field-meta.xml
<CustomField>
    <fullName>Debt_Amount__c</fullName>
    <description>The total amount of debt on this account</description>
    <inlineHelpText>The total amount of debt on this account</inlineHelpText>
    <label>Debt Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>