force-app/main/default/objects/Insolvency_Account__c/fields/Debt_Due_As_Of_Date__c.field-meta.xml
<CustomField>
    <fullName>Debt_Due_As_Of_Date__c</fullName>
    <description>Date debt became due</description>
    <formula>IF(NOT(ISPICKVAL(Insolvency_Status__c, &apos;New&apos;) || ISPICKVAL(Insolvency_Status__c, &apos;For Owner Review&apos;) || ISPICKVAL(Insolvency_Status__c, &apos;Wait / Hold&apos;)),
IF(NOT(ISBLANK(Last_Payment_Date__c)), IF(NOT(ISBLANK(Insolvency_Date__c)) &amp;&amp; (Last_Payment_Date__c + 30) &gt; Insolvency_Date__c, Insolvency_Date__c, Last_Payment_Date__c + 30),
IF(NOT(ISPICKVAL(Client_Identifier__c, &apos;Canadian Tire&apos;)) &amp;&amp; NOT(ISBLANK(Account_Open_date__c)), IF(NOT(ISBLANK(Insolvency_Date__c)) &amp;&amp; (Account_Open_date__c + 30) &gt; Insolvency_Date__c, Insolvency_Date__c, Account_Open_date__c + 30),
IF(ISPICKVAL(Client_Identifier__c, &apos;Canadian Tire&apos;) &amp;&amp; NOT(ISBLANK(Charge_Off_Date__c)), ADDMONTHS(Charge_Off_Date__c, -7),
IF(NOT(ISPICKVAL(Client_Identifier__c, &apos;Canadian Tire&apos;)) &amp;&amp; NOT(ISBLANK(Acknowledgement_date__c)), IF(NOT(ISBLANK(Insolvency_Date__c)) &amp;&amp; (Acknowledgement_date__c + 30) &gt; Insolvency_Date__c, Insolvency_Date__c, Acknowledgement_date__c + 30),
IF(NOT(ISBLANK(Judgement_Date__c)), IF(NOT(ISBLANK(Insolvency_Date__c)), Insolvency_Date__c, Judgement_Date__c + 30),
IF(ISPICKVAL(Client_Identifier__c, &apos;Canadian Tire&apos;), IF(ISBLANK(Account_Open_date__c), ADDMONTHS(TODAY(), -6), IF(ADDMONTHS(TODAY(), -6) &gt; (Account_Open_date__c + 30), ADDMONTHS(TODAY(), -6), (Account_Open_date__c + 30))),
null)))))), null)</formula>
    <inlineHelpText>Date debt became due</inlineHelpText>
    <label>Debt Due As Of Date</label>
    <type>Date</type>
</CustomField>