force-app/main/default/objects/Insolvency_Account__c/fields/Debt_Due_as_off_date__c.field-meta.xml
<CustomField>
    <fullName>Debt_Due_as_off_date__c</fullName>
    <description>Date debt became due</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date debt became due</inlineHelpText>
    <label>Debt Due as off Date</label>
    <type>Date</type>
</CustomField>