force-app/main/default/objects/Insolvency_Account__c/fields/DebtNext_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>DebtNext_Purchase_Price__c</fullName>
    <description>DebtNext Purchase Price</description>
    <inlineHelpText>DebtNext Purchase Price</inlineHelpText>
    <label>DebtNext Purchase Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>