force-app/main/default/objects/Insolvency_Account__c/fields/Debtor_1_Court_Number__c.field-meta.xml
<CustomField>
    <fullName>Debtor_1_Court_Number__c</fullName>
    <description>The court number for this account, as assigned to the debtor.</description>
    <formula>Insolvency__r.Debtor_1_Court_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The court number for this account, as assigned to the debtor.</inlineHelpText>
    <label>Court Number</label>
    <type>Text</type>
</CustomField>