force-app/main/default/objects/Insolvency_Account__c/fields/Debtor_1_Employer_Street__c.field-meta.xml
<CustomField>
    <fullName>Debtor_1_Employer_Street__c</fullName>
    <formula>Insolvency__r.Debtor_1_Employer_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employer Street</label>
    <type>Text</type>
</CustomField>