force-app/main/default/objects/Insolvency_Account__c/fields/Debtor_1_Estate_Number__c.field-meta.xml
<CustomField>
    <fullName>Debtor_1_Estate_Number__c</fullName>
    <description>The debtor estate number as noted on the creditor’s package</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The debtor estate number as noted on the creditor’s package</inlineHelpText>
    <label>Estate Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>