force-app/main/default/objects/Insolvency_Account__c/fields/Debtor_1_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Debtor_1_Mailing_City__c</fullName>
    <formula>Insolvency__r.Debtor_1_Mailing_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>