force-app/main/default/objects/Insolvency_Account__c/fields/Debtor_1_Mailing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Debtor_1_Mailing_Postal_Code__c</fullName>
    <formula>Insolvency__r.Debtor_1_Mailing_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postal Code</label>
    <type>Text</type>
</CustomField>