force-app/main/default/objects/Insolvency_Account__c/fields/Debtor_2_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Debtor_2_Date_of_Birth__c</fullName>
    <description>Debtor DOB</description>
    <formula>Insolvency__r.Debtor_2_Date_of_Birth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Debtor DOB</inlineHelpText>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>