force-app/main/default/objects/Insolvency_Account__c/fields/Debtor_2_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Debtor_2_First_Name__c</fullName>
    <description>First name of the secondary debtor</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>First name of the secondary debtor</inlineHelpText>
    <label>First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>