force-app/main/default/objects/Insolvency_Account__c/fields/Debtor__c.field-meta.xml
<CustomField>
    <fullName>Debtor__c</fullName>
    <description>Name of the primary debtor</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of the primary debtor</inlineHelpText>
    <label>Debtor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>