force-app/main/default/objects/Insolvency_Account__c/fields/Debtor_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Date_of_Birth__c</fullName>
    <description>Populate Debtor Date of Birth in the Overview section</description>
    <formula>Debtor_1_Date_of_Birth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Debtor Date of Birth</inlineHelpText>
    <label>Debtor Date of Birth</label>
    <type>Date</type>
</CustomField>