force-app/main/default/objects/Insolvency_Account__c/fields/Debtor_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Deceased__c</fullName>
    <formula>Insolvency__r.Debtor_Deceased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To flag a Debtor as deceased</inlineHelpText>
    <label>Debtor Deceased</label>
    <type>Checkbox</type>
</CustomField>