force-app/main/default/objects/Insolvency_Account__c/fields/Debtor_Name__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Name__c</fullName>
    <description>Populate Debtor name In Overview section</description>
    <formula>Debtor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Debtor name</inlineHelpText>
    <label>Debtor Name</label>
    <type>Text</type>
</CustomField>