force-app/main/default/objects/Insolvency_Account__c/fields/Debtor_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Name_Formula__c</fullName>
    <formula>Insolvency__r.Debtor_1_Last_Name__c +  
&apos;, &apos;+  Insolvency__r.Debtor_1_First_Name__c +
IF( NOT( ISBLANK( Insolvency__r.Debtor_1_Middle_Name__c ) ) , &apos; &apos; + 
 Insolvency__r.Debtor_1_Middle_Name__c , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Debtor Name</label>
    <type>Text</type>
</CustomField>