force-app/main/default/objects/Insolvency_Account__c/fields/Disallowance_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Disallowance_Reasons__c</fullName>
    <description>Disallowance Reasons</description>
    <inlineHelpText>Disallowance Reasons</inlineHelpText>
    <label>Disallowance Reasons</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect VIN#</fullName>
            </value>
            <value>
                <fullName>Incorrect Name Registered on PPSA</fullName>
            </value>
            <value>
                <fullName>No Lien Registered/Lien Expired</fullName>
            </value>
            <value>
                <fullName>Missing QC Retention Clause</fullName>
            </value>
            <value>
                <fullName>Incorrect Vehicle Registered</fullName>
            </value>
            <value>
                <fullName>Incorrect Province Registration</fullName>
            </value>
            <value>
                <fullName>PPSA Search Resulted in No Lien Found.</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Lien Discharged</fullName>
            </value>
            <value>
                <fullName>Account stat barred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>