force-app/main/default/objects/Insolvency_Account__c/fields/Discharge_Date__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Date__c</fullName>
    <description>Update with Insolvency Discharge Date</description>
    <formula>Insolvency__r.Insolvency_Discharged_Date__c</formula>
    <inlineHelpText>Insolvency Discharge Date</inlineHelpText>
    <label>Discharge Date</label>
    <type>Date</type>
</CustomField>