force-app/main/default/objects/Insolvency_Account__c/fields/Distressed_Data_Id__c.field-meta.xml
<CustomField>
    <fullName>Distressed_Data_Id__c</fullName>
    <description>Distressed Data Id</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Distressed Data Id</inlineHelpText>
    <label>Distressed Data Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>