force-app/main/default/objects/Insolvency_Account__c/fields/Do_Not_Run_Status_Validation__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Run_Status_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To avoid running Insolvency account status validation</description>
    <inlineHelpText>To avoid running Insolvency account status validation</inlineHelpText>
    <label>Do Not Run Status Validation</label>
    <type>Checkbox</type>
</CustomField>