force-app/main/default/objects/Insolvency_Account__c/fields/Documents_Required__c.field-meta.xml
<CustomField>
    <fullName>Documents_Required__c</fullName>
    <description>A list of the documents requested to be uploaded to this account record to process the proof of claim with the trustee.</description>
    <inlineHelpText>A list of the documents requested to be uploaded to this account record to process the proof of claim with the trustee.</inlineHelpText>
    <label>Required Documents to Attach</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 Months&apos; Statements</fullName>
            </value>
            <value>
                <fullName>CSC / PPSA / LIC</fullName>
            </value>
            <value>
                <fullName>Registered Charge / Certificate of Title</fullName>
            </value>
            <value>
                <fullName>CCS Acceptance and Payment History</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>