force-app/main/default/objects/Insolvency_Account__c/fields/Duplicate_Reasons_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Reasons_Picklist__c</fullName>
    <description>Duplicate Reason</description>
    <inlineHelpText>Duplicate Reason</inlineHelpText>
    <label>Duplicate Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joint Account holder (filed separately)</fullName>
            </value>
            <value>
                <fullName>Re-filed Insolvency with new Estate #</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>