force-app/main/default/objects/Insolvency_Account__c/fields/Eligible_For_Voting_Decision__c.field-meta.xml
<CustomField>
    <fullName>Eligible_For_Voting_Decision__c</fullName>
    <description>Checks if Insolvency is eligible for Voting Decision</description>
    <formula>Insolvency__r.Eligible_For_Voting_Decision__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checks if Insolvency is eligible for Voting Decision</inlineHelpText>
    <label>Insolvency Eligible For Voting Decision</label>
    <type>Checkbox</type>
</CustomField>