force-app/main/default/objects/Insolvency_Account__c/fields/Exclude_from_Purchase_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Purchase_Reason__c</fullName>
    <inlineHelpText>Exclude from Purchase Reason</inlineHelpText>
    <label>Exclude from Purchase Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legal/Judgement</fullName>
            </value>
            <value>
                <fullName>Pursuing Non-Bankrupt Co-Signor</fullName>
            </value>
            <value>
                <fullName>Account already purchased</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>