force-app/main/default/objects/Insolvency_Account__c/fields/Excluded_Account_Comments__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Account_Comments__c</fullName>
    <description>Excluded Account Comments</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Excluded Account Comments</inlineHelpText>
    <label>Excluded Account Comments</label>
    <length>150</length>
    <type>Text</type>
</CustomField>