force-app/main/default/objects/Insolvency_Account__c/fields/Excluded_from_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Excluded_from_Purchase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Excluded from Purchase</description>
    <inlineHelpText>Excluded from Purchase</inlineHelpText>
    <label>Excluded from Purchase</label>
    <type>Checkbox</type>
</CustomField>