force-app/main/default/objects/Insolvency_Account__c/fields/Expected_Account_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Expected_Account_Recovery__c</fullName>
    <description>The total expected amount to be recovered on this account</description>
    <formula>Creditor_Payout__c*(Claim_Amount__c / Insolvency__r.Total_Unsecured_Liabilities_Clc__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total expected amount to be recovered on this account</inlineHelpText>
    <label>Expected Account Recovery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>