force-app/main/default/objects/Insolvency_Account__c/fields/Expected_Account_Recovery_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Expected_Account_Recovery_Ratio__c</fullName>
    <description>The percentage of the claim amount expected amount to be recovered on this account</description>
    <formula>Expected_Account_Recovery__c / Claim_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The percentage of the claim amount expected amount to be recovered on this account</inlineHelpText>
    <label>Expected Account Recovery Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>