force-app/main/default/objects/Insolvency_Account__c/fields/Expected_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Payment_Amount__c</fullName>
    <description>The amount of the regular monthly payment to the Trustee, as applicable</description>
    <formula>Insolvency__r.Payment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The amount of the regular monthly payment to the Trustee, as applicable</inlineHelpText>
    <label>Expected Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>