force-app/main/default/objects/Insolvency_Account__c/fields/Expected_Payment_Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>Expected_Payment_Amount_Formula__c</fullName>
    <formula>Insolvency__r.Payment_Amount__c * Percentage_Of_Unsecured_Debt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Expected Payment Amount</inlineHelpText>
    <label>Expected Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>