force-app/main/default/objects/Insolvency_Account__c/fields/Expected_Remaining_Account_Recovery__c.field-meta.xml
<CustomField>
    <fullName>Expected_Remaining_Account_Recovery__c</fullName>
    <description>Expected Remaining Account Recovery Formula</description>
    <formula>Expected_Account_Recovery__c - Total_Account_Recovery__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Expected Remaining Account Recovery Formula</inlineHelpText>
    <label>Expected Remaining Account Recovery</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>