force-app/main/default/objects/Insolvency_Account__c/fields/Gender_Formula__c.field-meta.xml
<CustomField>
    <fullName>Gender_Formula__c</fullName>
    <formula>TEXT(Insolvency__r.Debtor_1_Gender__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gender</label>
    <type>Text</type>
</CustomField>