force-app/main/default/objects/Insolvency_Account__c/fields/Include_Voting_Letter__c.field-meta.xml
<CustomField>
    <fullName>Include_Voting_Letter__c</fullName>
    <defaultValue>true</defaultValue>
    <description>An indicator of whether a Voting Letter is to be included as part of the Proof of Claim package</description>
    <inlineHelpText>An indicator of whether a Voting Letter is to be included as part of the Proof of Claim package</inlineHelpText>
    <label>Include Voting Letter</label>
    <type>Checkbox</type>
</CustomField>