force-app/main/default/objects/Insolvency_Account__c/fields/Insolvency__c.field-meta.xml
<CustomField>
    <fullName>Insolvency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A reference to the insolvency record this insolvency account is attached to.</description>
    <inlineHelpText>A reference to the insolvency record this insolvency account is attached to.</inlineHelpText>
    <label>Insolvency</label>
    <referenceTo>Insolvency__c</referenceTo>
    <relationshipLabel>Insolvency Accounts</relationshipLabel>
    <relationshipName>Insolvency_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>