force-app/main/default/objects/Insolvency_Account__c/fields/Insolvency_Account_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Account_Document_Type__c</fullName>
    <description>Insolvency Account Document Type</description>
    <inlineHelpText>Insolvency Account Document Type</inlineHelpText>
    <label>Insolvency Account Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Statement</fullName>
            </value>
            <value>
                <fullName>Demand Notice</fullName>
            </value>
            <value>
                <fullName>Finals</fullName>
            </value>
            <value>
                <fullName>Form 149 – Notice requiring person to prove claim</fullName>
            </value>
            <value>
                <fullName>Form 76 – Notice to filing of proof of security</fullName>
            </value>
            <value>
                <fullName>Form 77 – Notice of disallowance of claim</fullName>
            </value>
            <value>
                <fullName>Interims</fullName>
            </value>
            <value>
                <fullName>Letter of Release</fullName>
            </value>
            <value>
                <fullName>Loan Agreement</fullName>
            </value>
            <value>
                <fullName>LoR Request Document</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PoC Document</fullName>
            </value>
            <value>
                <fullName>Proof of Security</fullName>
            </value>
            <value>
                <fullName>Stay of proceeding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>