force-app/main/default/objects/Insolvency_Account__c/fields/Insolvency_Account_Mail__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Account_Mail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insolvency Account Mail</label>
    <type>Email</type>
</CustomField>