force-app/main/default/objects/Insolvency_Account__c/fields/Insolvency_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Account_Owner__c</fullName>
    <description>Insolvency Account Owner</description>
    <formula>CASE( 
Owner:User.Profile.Name , 
&apos;Scotia Bank Community User&apos;, Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName , 
&apos;Scotia Bank Login Community User&apos;, Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName ,  
&apos;SPL Community User&apos;, Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName ,
&apos;SPL Login Community User&apos;, Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName ,
&apos;SDA Community User&apos;, Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName ,
&apos;SDA Login Community User&apos;, Owner:User.FirstName + &apos; &apos; +  Owner:User.LastName ,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Insolvency Account Owner</inlineHelpText>
    <label>Insolvency Account Owner</label>
    <type>Text</type>
</CustomField>