force-app/main/default/objects/Insolvency_Account__c/fields/Insolvency_Account_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Account_Record_Id__c</fullName>
    <description>Insolvency Account Record ID</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Insolvency Account Record ID</inlineHelpText>
    <label>Insolvency Account Record Id</label>
    <type>Text</type>
</CustomField>