force-app/main/default/objects/Insolvency_Account__c/fields/Insolvency_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Created_Date__c</fullName>
    <description>The date that the Insolvency created.</description>
    <formula>DATEVALUE(Insolvency__r.CreatedDate)</formula>
    <inlineHelpText>The date that the Insolvency created.</inlineHelpText>
    <label>Insolvency Created Date</label>
    <type>Date</type>
</CustomField>