force-app/main/default/objects/Insolvency_Account__c/fields/Insolvency_Expected_Discharge_Date__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Expected_Discharge_Date__c</fullName>
    <description>The date that the insolvency is expected to be discharged, as applicable.</description>
    <formula>Insolvency__r.Insolvency_Expected_Discharged_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date that the insolvency is expected to be discharged, as applicable.</inlineHelpText>
    <label>Expected Discharge Date</label>
    <type>Date</type>
</CustomField>