force-app/main/default/objects/Insolvency_Account__c/fields/Insolvency_Last_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Last_Payment_Amount__c</fullName>
    <description>The last payment amount for this Insolvency</description>
    <inlineHelpText>The last payment amount for this Insolvency</inlineHelpText>
    <label>Insolvency Last Payment Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>